<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.matthewschwarz.stockquotes_schwarz.MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enterStock"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.071"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.059" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="447dp"
        android:layout_marginTop="72dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow android:paddingTop="@dimen/topPad">
            <TextView
                android:id="@+id/symbolStock"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/stockSymbol"
                android:paddingLeft="@dimen/leftPad" />
            <TextView
                android:id="@+id/symbolShow"
                android:layout_width="@dimen/textBox"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow android:paddingTop="@dimen/topPad">
            <TextView
                android:id="@+id/nameStock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stockName"
                android:paddingLeft="@dimen/leftPad" />
            <TextView
                android:id="@+id/nameShow"
                android:layout_width="@dimen/textBox"
                android:layout_height="wrap_content"/>
        </TableRow>

        <TableRow android:paddingTop="@dimen/topPad">
            <TextView
                android:id="@+id/priceStock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stockPrice"
                android:paddingLeft="@dimen/leftPad"/>
            <TextView
                android:id="@+id/priceShow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </TableRow>

        <TableRow android:paddingTop="@dimen/topPad">
            <TextView
                android:id="@+id/timeStock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stockTime"
                android:paddingLeft="@dimen/leftPad"/>
            <TextView
                android:id="@+id/timeShow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </TableRow>

        <TableRow android:paddingTop="@dimen/topPad">
            <TextView
                android:id="@+id/changeStock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stockChange"
                android:paddingLeft="@dimen/leftPad"/>
            <TextView
                android:id="@+id/changeShow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </TableRow>

        <TableRow android:paddingTop="@dimen/topPad">
            <TextView
                android:id="@+id/rangeStock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stockRange"
                android:paddingLeft="@dimen/leftPad"/>
            <TextView
                android:id="@+id/rangeShow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </TableRow>


    </TableLayout>




</android.support.constraint.ConstraintLayout>
